crates/test-ui/ui/msg_send_id_unwrap.stderr
error[E0282]: type annotations needed
 --> ui/msg_send_id_unwrap.rs
  |
  |     let _: Id<Object> = unsafe { msg_send_id![cls, new].unwrap() };
  |                                  ^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `msg_send_id` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider giving `result` an explicit type
 --> $WORKSPACE/crates/objc2/src/macros/mod.rs
  |
  |         let result: /* Type */;
  |                   ++++++++++++
